--- a/plugins/Colorscale/Colorscale.ui
+++ b/plugins/Colorscale/Colorscale.ui
@@ -47,7 +47,10 @@
        <enum>QTabWidget::North</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
+      </property>
+      <property name="neutrinoSave" stdset="0">
+       <bool>true</bool>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
