--- a/UIs/nLogWin.ui
+++ b/UIs/nLogWin.ui
@@ -10,7 +10,7 @@
     <height>409</height>
    </rect>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="1,0,0">
    <property name="leftMargin">
     <number>4</number>
    </property>
@@ -23,19 +23,44 @@
    <property name="bottomMargin">
     <number>4</number>
    </property>
-   <item row="1" column="0">
-    <widget class="QCheckBox" name="followLog">
+   <item row="2" column="5">
+    <widget class="QPushButton" name="saveLog">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
       </font>
      </property>
      <property name="text">
-      <string>Follow</string>
+      <string>Save</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="4">
+    <widget class="QPushButton" name="copyLog">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Copy to clipboard</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="3">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="1">
     <widget class="QPushButton" name="clearLog">
      <property name="font">
       <font>
@@ -47,7 +72,19 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="2" column="0">
+    <widget class="QCheckBox" name="followLog">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Follow</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
     <widget class="QComboBox" name="levelLog">
      <property name="font">
       <font>
@@ -94,43 +131,6 @@
      </item>
     </widget>
    </item>
-   <item row="1" column="3">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="1" column="4">
-    <widget class="QPushButton" name="copyLog">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Copy to clipboard</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="5">
-    <widget class="QPushButton" name="saveLog">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Save</string>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0" colspan="6">
     <widget class="QTextEdit" name="logger">
      <property name="font">
@@ -144,10 +144,44 @@
      <property name="accessibleDescription">
       <string notr="true"/>
      </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="5">
+    <widget class="QPushButton" name="buttonFind">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Find</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="5">
+    <widget class="QLineEdit" name="lineFind">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
     </widget>
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>logger</tabstop>
+  <tabstop>lineFind</tabstop>
+  <tabstop>buttonFind</tabstop>
+  <tabstop>followLog</tabstop>
+  <tabstop>clearLog</tabstop>
+  <tabstop>levelLog</tabstop>
+  <tabstop>copyLog</tabstop>
+  <tabstop>saveLog</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
