--- a/plugins/Math_operations/Math_operations.ui
+++ b/plugins/Math_operations/Math_operations.ui
@@ -145,7 +145,7 @@
           </font>
          </property>
          <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <item>
           <property name="text">
@@ -185,6 +185,11 @@
          <item>
           <property name="text">
            <string>Mod</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>---------------------</string>
           </property>
          </item>
          <item>
@@ -230,6 +235,11 @@
          <item>
           <property name="text">
            <string>Resize</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>---------------------</string>
           </property>
          </item>
          <item>
