--- a/plugins/Math_operations/Math_operations.ui
+++ b/plugins/Math_operations/Math_operations.ui
@@ -239,6 +239,11 @@
          </item>
          <item>
           <property name="text">
+           <string>Add noise</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>---------------------</string>
           </property>
          </item>
