--- a/plugins/Colorscale/Colorscale.ui
+++ b/plugins/Colorscale/Colorscale.ui
@@ -192,13 +192,13 @@
               </font>
              </property>
              <property name="maximum">
-              <number>10000</number>
+              <number>100</number>
              </property>
              <property name="pageStep">
-              <number>1000</number>
+              <number>5</number>
              </property>
              <property name="value">
-              <number>10000</number>
+              <number>100</number>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
@@ -216,7 +216,10 @@
               </font>
              </property>
              <property name="maximum">
-              <number>10000</number>
+              <number>100</number>
+             </property>
+             <property name="pageStep">
+              <number>5</number>
              </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
