--- a/plugins/Visar/Visar1.ui
+++ b/plugins/Visar/Visar1.ui
@@ -25,16 +25,16 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <property name="leftMargin">
-     <number>0</number>
+     <number>4</number>
     </property>
     <property name="topMargin">
-     <number>0</number>
+     <number>4</number>
     </property>
     <property name="rightMargin">
-     <number>0</number>
+     <number>4</number>
     </property>
     <property name="bottomMargin">
-     <number>0</number>
+     <number>4</number>
     </property>
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabs">
@@ -587,6 +587,9 @@
            </property>
            <item row="0" column="1">
             <widget class="QDoubleSpinBox" name="etalon_lambda">
+             <property name="toolTip">
+              <string>Wavelength</string>
+             </property>
              <property name="prefix">
               <string>λ </string>
              </property>
@@ -609,6 +612,9 @@
            </item>
            <item row="0" column="0">
             <widget class="QDoubleSpinBox" name="etalon_thickness">
+             <property name="toolTip">
+              <string>Etalon thickness</string>
+             </property>
              <property name="prefix">
               <string>Thick </string>
              </property>
@@ -634,6 +640,9 @@
            </item>
            <item row="0" column="2">
             <widget class="QDoubleSpinBox" name="etalon_n0">
+             <property name="toolTip">
+              <string>Etalon refractive index</string>
+             </property>
              <property name="prefix">
               <string>n </string>
              </property>
@@ -678,12 +687,15 @@
             </widget>
            </item>
            <item row="0" column="3">
-            <widget class="QDoubleSpinBox" name="etalon_delta">
+            <widget class="QDoubleSpinBox" name="etalon_dn_over_dlambda">
+             <property name="toolTip">
+              <string>Chromatic dispersion</string>
+             </property>
              <property name="prefix">
-              <string>δ </string>
+              <string>dn/dλ </string>
              </property>
              <property name="suffix">
-              <string>%</string>
+              <string> 1/µm</string>
              </property>
              <property name="decimals">
               <number>6</number>
@@ -754,12 +766,11 @@
    <addaction name="actionAddVisar"/>
    <addaction name="actionDelVisar"/>
    <addaction name="separator"/>
-   <addaction name="actionGuess"/>
    <addaction name="actionRefresh"/>
   </widget>
   <action name="actionSaveTxt">
    <property name="icon">
-    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Qt_5_11_0_5_11_0_temporary_22340a-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
    </property>
    <property name="text">
@@ -767,18 +778,6 @@
    </property>
    <property name="toolTip">
     <string>Export TXT</string>
-   </property>
-  </action>
-  <action name="actionGuess">
-   <property name="icon">
-    <iconset resource="../Ghost_fringes/GhostFringes.qrc">
-     <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
-   </property>
-   <property name="text">
-    <string>refresh2</string>
-   </property>
-   <property name="toolTip">
-    <string>Guess both intefringes</string>
    </property>
   </action>
   <action name="actionRefresh">
@@ -795,7 +794,7 @@
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Qt_5_11_0_5_11_0_temporary_22340a-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
    </property>
    <property name="text">
@@ -807,7 +806,7 @@
   </action>
   <action name="actionRect3">
    <property name="icon">
-    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Qt_5_11_0_5_11_0_temporary_22340a-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
    </property>
    <property name="text">
@@ -819,7 +818,7 @@
   </action>
   <action name="actionSaveTxtMultiple">
    <property name="icon">
-    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Qt_5_11_0_5_11_0_temporary_22340a-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/saveTxtMultiple.png</normaloff>:/icons/saveTxtMultiple.png</iconset>
    </property>
    <property name="text">
@@ -831,7 +830,7 @@
   </action>
   <action name="actionAddVisar">
    <property name="icon">
-    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Qt_5_11_0_5_11_0_temporary_22340a-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
    </property>
    <property name="text">
@@ -843,7 +842,7 @@
   </action>
   <action name="actionDelVisar">
    <property name="icon">
-    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Qt_5_11_0_5_11_0_temporary_22340a-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
    </property>
    <property name="text">
@@ -884,12 +883,11 @@
   <tabstop>etalon_thickness</tabstop>
   <tabstop>etalon_lambda</tabstop>
   <tabstop>etalon_n0</tabstop>
-  <tabstop>etalon_delta</tabstop>
+  <tabstop>etalon_dn_over_dlambda</tabstop>
   <tabstop>etalon_sensitivity</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
-  <include location="../Ghost_fringes/GhostFringes.qrc"/>
+  <include location="../../../build-neutrinoMaster-Qt_5_11_0_5_11_0_temporary_22340a-Debug/src/qrc/icons.qrc"/>
   <include location="Visar.qrc"/>
  </resources>
  <connections/>
